--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "json-bigint": "^1.0.0",
     "lucide": "^0.545.0",
     "lucide-react": "^0.545.0",
     "next-themes": "^0.4.6",
